--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <meta name=mobile-web-app-capable content=yes>
 <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <style>
+	body
+	{
+		background:#222;
+		color:#fff;
+		text-align:center;
+
+	}
 	#measure
 	{
 		opacity:0;
@@ -49,8 +56,8 @@
 
 			return `${Math.round(w/scale)}x${Math.round(h/scale)} ${unit} (${units[unit]})`
 		})
-		.map(innerHTML=>Object.assign(document.createElement('div'),{innerHTML}))
-		.forEach(el=>document.body.appendChild(el))
+		.map(innerHTML=>Object.assign(document.createElement('h2'),{innerHTML}))
+		.forEach(el=>document.querySelector('main').appendChild(el))
 	}
 </script>
 <h1>How big is my screen in _?</h1>
