--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 		.forEach(el=>document.querySelector('main').appendChild(el))
 	}
 </script>
-<h1>How big is my screen in _?</h1>
+<h1>How big is my screen?</h1>
 <main></main>
 <div id=measure></div>
