--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <style>
 	body
 	{
-		background:#222;
+		background-color:#222;
+		background-image:
+			linear-gradient(90deg,transparent 50%,#5555 50%),
+			linear-gradient(0deg,transparent 50%,#5555 50%);
+		background-size:1em 1em;
+		background-position:0 0,1em 1em;
 		color:#fff;
 		text-align:center;
-
 	}
 	#measure
 	{
