--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		name="viewport"
 		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
 	/>
+	<meta
+		name="description"
+		content="A simple web app to measure the size of a screen in various CSS units."
+	/>
+
+	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+	<link rel="apple-touch-icon" href="appicon.png" />
+	<meta name="apple-mobile-web-app-title" content="Screen Size" />
+	<link rel="manifest" href="/site.webmanifest" />
+	<title>Screen Size</title>
 	<style>
 		html,
 		body {
