--- a/index.html
+++ b/index.html
@@ -138,4 +138,9 @@
 	</script>
 	<div id="measure"></div>
 	<h1>How big is my screen?</h1>
+	<script
+		defer
+		src="https://static.cloudflareinsights.com/beacon.min.js"
+		data-cf-beacon='{"token": "39506bcac88a4654af2444d4c2dd5a6e"}'
+	></script>
 </body>
