renamed/increased PNG icon resolution
* There was no icon that showed up when attempting to add this icon to the homescreen on Android, so I'm attempting to see if a higher res image will suffice.
* Also renamed the file to be more in line with the svg icon file's new name for consistency.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		content="A simple web app to measure the size of a screen in various CSS units."
 	/>
 
-	<link rel="apple-touch-icon" href="appicon.png" />
 	<link rel="icon" type="image/svg+xml" href="icon.svg" />
+	<link rel="apple-touch-icon" href="icon.png" />
 	<meta name="apple-mobile-web-app-title" content="Screen Size" />
 	<link rel="manifest" href="/site.webmanifest" />
 	<title>Screen Size</title>
